[project]
name = "oop"
version = "0.1.0"
description = "teste"
authors = [
    {name = "José Welton de Sousa Melo",email = "welton.sousa@aluno.ufca.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
