[project]
name = "mini-biblioteca"
version = "0.1.0"
description = ""
authors = [
    {name = "José Welton de Sousa Melo",email = "welton.sousa@aluno.ufca.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mini_biblioteca", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
